# fungi

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: android-release.yml  android-tests.yml  pr-agent.yml  release.yml  tests.yml
crates/config/: Cargo.toml
crates/config-migrate/src/: config_files.rs  detection.rs  tests.rs
crates/config/src/: build_info.rs  daemon_lock.rs  lib.rs  rpc_endpoint.rs  runtime.rs
crates/daemon/: Cargo.toml
crates/daemon-grpc/: Cargo.toml
crates/daemon-grpc/proto/: fungi_daemon.proto
crates/daemon-grpc/src/: lib.rs
crates/daemon/scripts/: real-wasi-runtime-smoke.sh
crates/daemon/src/: daemon.rs  http_client.rs  lib.rs  recipes.rs  service_control.rs  test_support.rs
crates/daemon/src/api/: peer.rs  runtime.rs  service_access.rs
crates/daemon/src/controls/: mod.rs  service_control.rs
crates/daemon/src/runtime/: control.rs  helpers.rs  manifest.rs  model.rs  providers.rs  tests.rs
crates/daemon/tests/: remote_service_logs_tests.rs
crates/lab/src/: process.rs  util.rs
crates/swarm/: Cargo.toml
crates/swarm/src/: libp2p.rs
crates/swarm/src/behaviours/: mod.rs
crates/swarm/src/libp2p/: control.rs  relay.rs  runtime.rs  tests.rs
crates/swarm/src/state/: connectivity.rs  registry.rs
crates/util/src/: protocols.rs
fungi/: Cargo.toml
fungi/src/: logging.rs
fungi/src/commands/: fungi_daemon.rs  fungi_relay.rs
fungi/src/commands/fungi_control/: client.rs  device.rs  info.rs  service.rs
fungi/tests/: cli_smoke.rs
