[package]
name = "fungi-daemon"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Expose TestDaemon and helpers for integration tests and external test crates.
test-support = []


[dependencies]
fungi-config = { workspace = true }
fungi-docker-agent = { workspace = true }
fungi-swarm = { workspace = true }
fungi-util = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true, features = ["full"] }
libp2p = { workspace = true }
home = { workspace = true }
futures = { workspace = true }
interprocess = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
fungi-stream = { workspace = true }
tokio-util = { workspace = true, features = ["compat", "io"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tempfile = { workspace = true }
env_logger = { workspace = true }
mdns-sd = { workspace = true }
flume = { workspace = true }
typed-path = { workspace = true }
reqwest = { workspace = true, features = ["rustls"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
ulid = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
rustls = { workspace = true, features = ["aws_lc_rs", "std", "tls12"] }
webpki-roots = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
